<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_insetEdge="none"
    tools:context=".activities.ContactDetailActivity">

    <ImageView
        android:id="@+id/pictureDetailImageView"
        android:layout_width="0dp"
        android:layout_height="380dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_wrapBehaviorInParent="included"
        app:srcCompat="@color/teal_700"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nameDetailTextView"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="24dp"
        android:text="@string/name_text_view_sample"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/pictureDetailImageView"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        style="@style/cardView"
        android:layout_width="352dp"
        android:layout_height="351dp"
        android:layout_marginTop="36dp"
        android:elevation="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictureDetailImageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/homeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="104dp"
                android:layout_marginTop="20dp"
                android:text="@string/home"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailDetailTextView" />

            <TextView
                android:id="@+id/phoneDetailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="28dp"
                android:text="@string/phone_text_view_sample"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/emailDetailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="44dp"
                android:text="@string/email_text_view_sample"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workTextView" />

            <TextView
                android:id="@+id/mobileTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:text="@string/mobile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneDetailTextView" />

            <TextView
                android:id="@+id/cellDetailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:textSize="18dp"
                android:layout_marginTop="48dp"
                android:text="@string/cell_text_view_sample"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobileTextView" />

            <TextView
                android:id="@+id/workTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:text="@string/work"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cellDetailTextView" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_phone_white"
                app:tint="@color/gray" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_email_white"
                app:tint="@color/gray" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="100dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/emailDetailTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>